# data-warehouse

./: .gitignore  README.md  config.yaml  pyproject.toml
.dlt/: config.toml
Scripts/Bronze/: ddl_crm.sql  ddl_erp.sql  load.sql  load_data.sql  test.sql
Scripts/Gold/: create_dim_customers.sql  create_dim_products.sql
Scripts/Silver/: ddl.sql  load.sql  load_crm_cust_info.sql  load_crm_prd_info.sql  load_crm_sales_details.sql  load_erp_cust_az12.sql  load_erp_loc_a101.sql  load_erp_px_cat_g1v2.sql
Tests/: test_gold.sql  test_silver.sql
dlt_pipelines/: load_csv_source.py
docs/: data-flow-diagram.drawio  diagrams.drawio
models/gold/: dim_customers.sql  dim_products.sql  fact_sales.sql
models/silver/: crm_cust_info.sql  crm_prd_info.sql  crm_sales_details.sql  erp_cust_az12.sql  erp_loc_a101.sql  erp_px_cat_g1v2.sql
sql/Scripts/: create_layers.sql
sql/Scripts/Bronze/: ddl_bronze.sql
sql/Scripts/Gold/: create_fact_sales.sql
sql/Scripts/Silver/: ddl_silver.sql
