[project]
name = "data-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[postgres,sql-database]>=1.13.0",
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupysql>=0.11.1",
    "python-dotenv>=1.1.1",
]
